# vimdoc

./: .editorconfig  .gitignore  .pre-commit-hooks.yaml  .travis.yml  MANIFEST.in  README.md  VERSION.txt  pyproject.toml  setup.cfg  setup.py  stdeb.cfg  vimdocpackage.cgf
.github/workflows/: discord.yml  tests.yml
scripts/: vimdoc
tests/: module_tests.py
vimdoc/: __init__.py  __main__.py  _shtab.py  args.py  block.py  codeline.py  docline.py  error.py  module.py  output.py  paragraph.py  parser.py  regex.py
